# streamtranscoder

./: .gitignore  AUTHORS.MD  ChangeLog  INSTALL.MD  Makefile.am  Makefile.in  NEWS  README  README.MD  Socket.h  aclocal.m4  cbuffer.cpp  cbuffer.h  commandline.cpp  configure  configure.in  liboddcast.cpp  liboddcast.h  liboddcast_wxconfig.cpp  liboddcast_wxconfig.h  log.cpp  mp3decoder.cpp  mp3decoder.h  ncursesUI.cpp  oggvdecoder.cpp  oggvdecoder.h  resample.c  streamTranscoderUI.def  streamTranscoderUI.dsp  streamTranscoderUI.dsw  streamTranscoderUI.h  streamTranscoderUI.rc  streamTranscoderUI.sln  streamTranscoderUI.vcproj  streamTranscoderUI.vcxproj  streamTranscoder_WX.cpp  transcode.cpp  transcode.h  transcode_nui.cpp  transcoder.xpm  (+4 more)
dsp_oddcast_wa3/: OddcastDSP.dsp  OddcastDSP.dsw  dsp.cpp  dsp.h  oc-active.psd  oddcast_dsp.nsi  oddcast_dsp.rc  oddcastdsp.cpp  oddcastdsp.h  oddcastwnd.cpp  oddcastwnd.h  oddsock_logo.psd
dsp_oddcast_wa3/CVS/: Entries  Repository  Root
win32/: liboddcast.dsp  liboddcast.dsw  liboddcast.sln  liboddcast.vcproj  liboddcast.vcxproj  liboddcast.vcxproj.filters  liboddcast_config.dsp  liboddcast_config.sln  liboddcast_config.vcproj  liboddcast_config.vcxproj  liboddcast_config.vcxproj.filters  libtranscoder.dsp  libtranscoder.dsw  libtranscoder.sln  libtranscoder.vcproj  libtranscoder.vcxproj  libtranscoder.vcxproj.filters  streamTranscoder_win32UI.iss  transcoder.dsp  transcoder.dsw  transcoder.sln  transcoder.vcproj  transcoder.vcxproj  transcoder.vcxproj.filters
win32/CVS/: Entries  Repository
